<resources>
    <string name="app_name">Transtourent</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="col1">Vehicle</string>
    <string name="col2">Total Payment</string>
    <string name="col3">Payment Status</string>
    <string name="col4">Approval Status</string>
    <string name="col5">Date</string>
</resources>