<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        tools:context=".home">

        <TextView
            android:background="@color/violet"
            android:id="@+id/bookings"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="BOOKINGS"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_below="@id/app_logo"
            android:layout_centerInParent="true"
            android:paddingLeft="100dp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="350dp"
            android:layout_height="160dp"
            android:layout_alignParentRight="true"
            android:paddingRight="50dp"
            android:paddingTop="20dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/logo"/>



        <ImageView
            android:id="@+id/back"
            android:layout_width="380dp"
            android:layout_height="545dp"
            android:scaleType="fitXY"
            android:layout_centerInParent="true"
            android:paddingTop="185dp"
            android:src="@drawable/bk2hd"/>

        <TableLayout

            android:layout_below="@id/bookings"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            android:background="@color/white">

            <TableRow
                android:background="@color/orange">

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:text="@string/col1"
                    android:textStyle="bold"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="1dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/col2"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="13sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/col3"
                    android:textStyle="bold"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="13sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/col4"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/col5"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="6"
                    android:gravity="center_horizontal"/>



            </TableRow>
            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_centerInParent="true"
                android:background="@color/white"/>
            <TableRow
                android:background="@color/orange">

                <ImageView

                    android:id="@+id/van1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_below="@id/van"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/van_logo"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="PHP 7,000"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="Approved"
                    android:textStyle="bold"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="11sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="Approved"
                    android:textStyle="bold"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="9sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="11/29/22"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="6"
                    android:gravity="center_horizontal"/>



            </TableRow>
            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_centerInParent="true"
                android:background="@color/white"/>
            <TableRow
                android:background="@color/orange">

                <ImageView

                    android:id="@+id/bus1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/bus"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:src="@drawable/bus_logo"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="PHP 27,000"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="11sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="Approved"
                    android:textStyle="bold"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="PENDING"
                    android:textStyle="bold"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="10sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="PENDING"
                    android:textStyle="bold"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="10.4sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>

            </TableRow>
            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_centerInParent="true"
                android:background="@color/white"/>
            <TableRow
                android:background="@color/orange">

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="13sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>



            </TableRow>
            <TableRow
                android:background="@color/orange">

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="13sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>



            </TableRow>
            <TableRow
                android:background="@color/orange">

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="13sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>



            </TableRow>
            <TableRow
                android:background="@color/orange">

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="13sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:textColor="@color/violet"
                    android:padding="10sp"
                    android:textSize="14sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>



            </TableRow>








        </TableLayout>



    </RelativeLayout>

</FrameLayout>